--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "test": "./node_modules/jasmine/bin/jasmine.js"
   },
   "dependencies": {
+    "bluebird": "^2.3.11",
     "LiveScript": "^1.3.1",
     "express": "^4.10.6",
     "immutable": "^3.4.1",
