--- a/package.json
+++ b/package.json
@@ -22,16 +22,19 @@
   "bin": {
     "reflex-server": "bin/server.js"
   },
-  "main": "index.js",
+  "main": "./lib/index.js",
   "files": [
-    "src/server.js"
+    "package.json",
+    "lib/"
   ],
   "scripts": {
+    "compile": "./node_modules/.bin/gulp",
+    "prepublish": "npm run-script compile",
+    "pretest": "npm run-script compile",
     "test": "./node_modules/jasmine/bin/jasmine.js"
   },
   "dependencies": {
     "bluebird": "^2.3.11",
-    "LiveScript": "^1.3.1",
     "express": "^4.10.6",
     "immutable": "^3.4.1",
     "jade": "^1.8.2",
@@ -40,6 +43,9 @@
     "react": "^0.12.2"
   },
   "devDependencies": {
+    "LiveScript": "^1.3.1",
+    "gulp": "^3.8.10",
+    "gulp-livescript": "^2.3.0",
     "jasmine": "^2.1.1"
   }
 }
