--- a/package.json
+++ b/package.json
@@ -35,17 +35,21 @@
   },
   "dependencies": {
     "bluebird": "^2.3.11",
+    "envify": "^3.2.0",
     "express": "^4.10.6",
     "immutable": "^3.4.1",
     "jade": "^1.8.2",
+    "liveify": "^2.0.0",
     "page": "https://github.com/charypar/page.js/tarball/server-side-fix",
     "prelude-ls": "^1.1.1",
-    "react": "^0.12.2"
+    "react": "^0.12.2",
+    "uglifyify": "^3.0.1"
   },
   "devDependencies": {
     "LiveScript": "^1.3.1",
     "gulp": "^3.8.10",
     "gulp-livescript": "^2.3.0",
+    "gulp-strip-code": "^0.1.2",
     "jasmine": "^2.1.1"
   }
 }
