--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "page": "https://github.com/charypar/page.js/tarball/server-side-fix",
     "prelude-ls": "^1.1.1",
     "react": "^0.13.0-beta.1",
-    "uglifyify": "^3.0.1"
+    "uglifyify": "^3.0.1",
+    "watchify": "^2.3.0"
   },
   "devDependencies": {
     "LiveScript": "^1.3.1",
