--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "test": "./node_modules/jasmine/bin/jasmine.js"
   },
   "dependencies": {
+    "aliasify": "^1.5.1",
     "bluebird": "^2.3.11",
+    "browserify": "^8.1.3",
     "envify": "^3.2.0",
     "express": "^4.10.6",
     "hotload": "0.0.5",
