--- a/package.json
+++ b/package.json
@@ -34,25 +34,22 @@
     "test": "./node_modules/jasmine/bin/jasmine.js"
   },
   "dependencies": {
-    "aliasify": "^1.5.1",
     "bluebird": "^2.3.11",
-    "browserify": "^8.1.3",
-    "envify": "^3.2.0",
+    "envify-loader": "^0.1.0",
     "express": "^4.10.6",
     "immutable": "^3.4.1",
     "jade": "^1.8.2",
-    "liveify": "^2.0.0",
+    "livescript-loader": "^0.1.3",
     "page": "https://github.com/charypar/page.js/tarball/server-side-fix",
     "prelude-ls": "^1.1.1",
     "react": "^0.13.0-beta.1",
-    "uglifyify": "^3.0.1",
-    "watchify": "^2.3.0"
+    "webpack": "^1.5.3"
   },
   "devDependencies": {
-    "LiveScript": "^1.3.1",
     "gulp": "^3.8.10",
     "gulp-livescript": "^2.3.0",
     "gulp-strip-code": "^0.1.2",
-    "jasmine": "^2.1.1"
+    "jasmine": "^2.1.1",
+    "LiveScript": "^1.3.1"
   }
 }
