Fixed server reload code, passing dynamic bundle location to jade template

--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "page": "https://github.com/charypar/page.js/tarball/server-side-fix",
     "prelude-ls": "^1.1.1",
     "react": "^0.13.0-beta.1",
-    "webpack": "^1.5.3"
+    "webpack": "^1.5.3",
   },
   "devDependencies": {
     "gulp": "^3.8.10",
