Basic scaffold for POST processing WIP

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "bluebird": "^2.3.11",
     "envify-loader": "^0.1.0",
+    "body-parser": "^1.10.1",
     "express": "^4.10.6",
     "immutable": "^3.4.1",
     "jade": "^1.8.2",
