--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "bluebird": "^2.3.11",
+    "deep-equal": "^1.0.0",
     "envify-loader": "^0.1.0",
     "express": "^4.10.6",
     "immutable": "^3.4.1",
