--- a/package.json
+++ b/package.json
@@ -34,18 +34,18 @@
     "test": "./node_modules/jasmine/bin/jasmine.js"
   },
   "dependencies": {
-    "bluebird": "^2.3.11",
+    "bluebird": "^2.9.12",
     "deep-equal": "^1.0.0",
     "envify-loader": "^0.1.0",
-    "express": "^4.10.6",
-    "immutable": "^3.4.1",
-    "jade": "^1.8.2",
+    "express": "^4.12.0",
+    "immutable": "^3.6.2",
+    "jade": "^1.9.2",
     "livescript-loader": "^0.1.3",
     "page": "https://github.com/charypar/page.js/tarball/server-side-fix",
     "prelude-ls": "^1.1.1",
-    "react": "^0.13.0-beta.1",
-    "react-hot-loader": "^1.1.4",
-    "webpack": "^1.5.3",
+    "react": "0.12.x",
+    "react-hot-loader": "^1.1.5",
+    "webpack": "^1.6.0",
     "webpack-dev-server": "^1.7.0"
   },
   "devDependencies": {
