--- a/package.json
+++ b/package.json
@@ -34,12 +34,13 @@
     "test": "./node_modules/jasmine/bin/jasmine.js"
   },
   "dependencies": {
+    "babel-core": "^4.6.5",
+    "babel-loader": "^4.0.0",
     "bluebird": "^2.9.12",
     "deep-equal": "^1.0.0",
     "express": "^4.12.0",
     "immutable": "^3.6.2",
     "jade": "^1.9.2",
-    "livescript-loader": "^0.1.3",
     "page": "https://github.com/charypar/page.js/tarball/server-side-fix",
     "prelude-ls": "^1.1.1",
     "react": "0.12.x",
