--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "compile": "./node_modules/.bin/gulp",
     "prepublish": "npm run-script compile",
     "pretest": "npm run-script compile",
-    "test": "./node_modules/jasmine/bin/jasmine.js"
+    "test": "./node_modules/jasmine/bin/jasmine.js",
+    "postinstall": "./node_modules/.bin/gulp"
   },
   "dependencies": {
     "babel-core": "^4.6.5",
