--- a/package.json
+++ b/package.json
@@ -35,9 +35,13 @@
     "test": "./node_modules/jasmine/bin/jasmine.js"
   },
   "dependencies": {
+    "LiveScript": "^1.3.1",
+    "babel": "^4.7.1",
+    "babel-core": "^4.7.1",
+    "babel-loader": "^4.1.0",
     "bluebird": "^2.3.11",
-    "envify-loader": "^0.1.0",
     "body-parser": "^1.10.1",
+    "envify-loader": "^0.1.0",
     "express": "^4.10.6",
     "immutable": "^3.4.1",
     "jade": "^1.8.2",
@@ -46,14 +50,13 @@
     "prelude-ls": "^1.1.1",
     "react": "~0.12",
     "react-hot-loader": "^1.1.4",
-    "webpack": "^1.5.3",
+    "webpack": "^1.7.2",
     "webpack-dev-server": "^1.7.0"
   },
   "devDependencies": {
     "gulp": "^3.8.10",
     "gulp-livescript": "^2.3.0",
     "gulp-strip-code": "^0.1.2",
-    "jasmine": "^2.1.1",
-    "LiveScript": "^1.3.1"
+    "jasmine": "^2.1.1"
   }
 }
