--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reflex",
-  "version": "0.0.3",
+  "version": "0.0.3a",
   "description": "Web application framework for React",
   "homepage": "https://github.com/redbadger/reflex",
   "repository": {
