--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "babel-loader": "^4.1.0",
     "bluebird": "^2.3.11",
     "body-parser": "^1.10.1",
+    "cookie": "^0.1.2",
+    "cookie-parser": "^1.3.4",
     "envify-loader": "^0.1.0",
     "express": "^4.10.6",
     "immutable": "^3.4.1",
