--- a/package.json
+++ b/package.json
@@ -43,14 +43,13 @@
     "body-parser": "^1.10.1",
     "cookie": "^0.1.2",
     "cookie-parser": "^1.3.4",
-    "envify-loader": "^0.1.0",
     "express": "^4.10.6",
     "immutable": "^3.4.1",
     "jade": "^1.8.2",
     "livescript-loader": "^0.1.3",
     "page": "https://github.com/charypar/page.js/tarball/server-side-fix",
     "prelude-ls": "^1.1.1",
-    "react": "~0.13",
+    "react": "^0.13.3",
     "react-hot-loader": "^1.1.4",
     "webpack": "^1.7.2",
     "webpack-dev-server": "^1.7.0"
