--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "test": "./node_modules/jasmine/bin/jasmine.js"
   },
   "dependencies": {
-    "LiveScript": "^1.3.1",
     "babel": "^5.4.3",
     "babel-core": "^5.4.3",
     "babel-loader": "^5.1.2",
@@ -46,9 +45,10 @@
     "express": "^4.10.6",
     "immutable": "^3.4.1",
     "jade": "^1.8.2",
-    "livescript-loader": "0.1.3",
+    "livescript": "^1.4.0",
+    "livescript-loader": "^0.1.5",
     "page": "https://github.com/charypar/page.js/tarball/server-side-fix",
-    "prelude-ls": "^1.1.1",
+    "prelude-ls": "^1.1.2",
     "react": "^0.13.3",
     "react-hot-loader": "^1.1.4",
     "webpack": "^1.7.2",
@@ -56,7 +56,7 @@
   },
   "devDependencies": {
     "gulp": "^3.8.10",
-    "gulp-livescript": "^2.3.0",
+    "gulp-livescript": "^2.4.0",
     "gulp-strip-code": "^0.1.2",
     "jasmine": "^2.1.1"
   }
