--- a/package.json
+++ b/package.json
@@ -35,28 +35,26 @@
     "test": "./node_modules/jasmine/bin/jasmine.js"
   },
   "dependencies": {
-    "LiveScript": "^1.3.1",
-    "babel": "^4.7.1",
-    "babel-core": "^4.7.1",
-    "babel-loader": "^4.1.0",
-    "bluebird": "^2.3.11",
-    "body-parser": "^1.10.1",
-    "envify-loader": "^0.1.0",
-    "express": "^4.10.6",
-    "immutable": "^3.4.1",
-    "jade": "^1.8.2",
-    "livescript-loader": "^0.1.3",
-    "page": "https://github.com/charypar/page.js/tarball/server-side-fix",
-    "prelude-ls": "^1.1.1",
-    "react": "~0.13",
-    "react-hot-loader": "^1.1.4",
-    "webpack": "^1.7.2",
-    "webpack-dev-server": "^1.7.0"
+    "babel": "^5.5.6",
+    "babel-core": "^5.5.6",
+    "babel-loader": "^5.1.4",
+    "bluebird": "^2.9.27",
+    "body-parser": "^1.12.4",
+    "immutable": "^3.7.3",
+    "jade": "^1.10.0",
+    "livescript": "^1.4.0",
+    "livescript-loader": "^0.1.5",
+    "page": "^1.6.3",
+    "prelude-ls": "^1.1.2",
+    "react": "^0.13.3",
+    "react-hot-loader": "^1.2.7",
+    "webpack": "^1.9.10",
+    "webpack-dev-server": "^1.9.0"
   },
   "devDependencies": {
-    "gulp": "^3.8.10",
-    "gulp-livescript": "^2.3.0",
+    "gulp": "^3.9.0",
+    "gulp-livescript": "^2.4.0",
     "gulp-strip-code": "^0.1.2",
-    "jasmine": "^2.1.1"
+    "jasmine": "^2.3.1"
   }
 }
