Add branch to deploy branches

--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,6 @@
 deployment:
   master:
-    branch: master
+    branch: [master, build-docs]
     owner: arch-js
     commands:
       - ./build-docs.sh
