Use bash command

--- a/circle.yml
+++ b/circle.yml
@@ -4,4 +4,4 @@ deployment:
     owner: arch-js
     commands:
       - git clone git@github.com:arch-js/arch-js.github.io.git
-      - ./build-docs.sh
+      - bash ./build-docs.sh
