Fix deployment script filename

--- a/circle.yml
+++ b/circle.yml
@@ -3,4 +3,4 @@ deployment:
     branch: master
     owner: arch-js
     commands:
-      - bash ./build-docs.sh
+      - bash ./circle-build-docs.sh
