--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "jade": "^1.8.2",
     "livescript": "^1.4.0",
     "livescript-loader": "^0.1.5",
-    "page": "https://github.com/charypar/page.js/tarball/server-side-fix",
+    "page": "^1.6.3",
     "prelude-ls": "^1.1.2",
     "react": "^0.13.3",
     "react-hot-loader": "^1.1.4",
