--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arch",
-  "version": "0.0.3a",
+  "version": "0.0.3-1",
   "description": "Web application framework for React",
   "homepage": "https://github.com/redbadger/arch",
   "repository": {
@@ -54,7 +54,9 @@
   },
   "devDependencies": {
     "gulp": "^3.9.0",
+    "gulp-bump": "^0.3.1",
     "gulp-livescript": "^2.4.0",
+    "gulp-load-plugins": "^1.0.0-rc.1",
     "gulp-strip-code": "^0.1.2",
     "jasmine": "^2.3.1"
   }
