--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arch",
-  "version": "0.0.3-1",
+  "version": "0.0.3a",
   "description": "Web application framework for React",
   "homepage": "https://github.com/redbadger/arch",
   "repository": {
