--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "livescript": "^1.4.0",
     "livescript-loader": "^0.1.5",
     "lodash": "^3.10.0",
+    "lson": "^1.0.3",
     "page": "^1.6.3",
     "prelude-ls": "^1.1.2",
     "react": "^0.13.3",
