--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "gulp-load-plugins": "^1.0.0-rc.1",
     "gulp-strip-code": "^0.1.2",
     "jasmine": "^2.3.1",
-    "rc": "^1.0.3"
+    "rc": "^1.0.3",
+    "sinon": "^1.16.1"
   }
 }
